--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 	</ol>
 	<ul>
 		<b><li>food 1</li></b>
-		<strong><li>food 2></strong>
+		<strong><li>food 2</strong>
 		<i><li>food 3</l>
 		<li>food 4</li>
 		<li>food 5</li></i>
